tests/negative/neg_pr118d_reverse_after_of.safe
package neg_pr118d_reverse_after_of

   type int_list is array of integer

   values : int_list = [1, 2, 3]
   total : integer = 0

   for item of reverse values
      total = total + item

   print (total)
